--- a/templates/employees/shops.html
+++ b/templates/employees/shops.html
@@ -1,7 +1,7 @@
 {% extends "pos/base.html" %}
 {% load static %}
 <!-- Page title  -->
-{% block title %}employee shops{% endblock title %}
+{% block title %}Shops{% endblock title %}
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}
@@ -11,7 +11,7 @@
 {% endblock stylesheets %}
 
 <!-- Page Heading -->
-{% block heading %}employee shops{% endblock heading %}
+{% block heading %}Shops{% endblock heading %}
 
 <!-- Page content  -->
 {% block content %}
