--- a/templates/purchases/purchases_details.html
+++ b/templates/purchases/purchases_details.html
@@ -49,8 +49,8 @@
                                                 <th>#</th>
                                                 <th>Name</th>
                                                 <th>Price</th>
-                                                <th>Weight (KG)</th>
                                                 <th>Quantity</th>
+                                                <th>Weight (KG)</th>
                                                 <th>Total</th>
                                                 </tr>
                                             </thead>
@@ -60,8 +60,8 @@
                                                 <td>{{forloop.counter}}</td>
                                                 <td>{{detail.product.name}}</td>
                                                 <td>{{detail.price}}</td>
-                                                <td>{{detail.weight}}</td>
                                                 <td class="text-center">{{detail.quantity}}</td>
+                                                <td class="text-center">{{detail.weight}}</td>
                                                 <td>{{detail.total_detail}}</td>
                                             </tr>
                                             {% endfor %}
