--- a/templates/sales/sales.html
+++ b/templates/sales/sales.html
@@ -40,11 +40,11 @@
                         <tr>
                             <th style="width:5%">#</th>
                             <th style="width:15%">ID</th>
-                            <th style="width:25%">Date</th>
+                            <th style="width:20%">Date</th>
                             <th style="width:20%">Customer</th>
                             <th class="text-center" style="width:10%">Total</th>
                             <th class="text-center" style="width:5%">Items</th>
-                            <th class="text-center" style="width:10%">Actions</th>
+                            <th class="text-center" style="width:15%">Actions</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -67,6 +67,12 @@
                                 <a href="{% url 'sales:sales_receipt_pdf' s.id %}" class="text-decoration-none">
                                     <button type="button" class="btn btn-dark btn-sm" data-bs-toggle="tooltip" title="View Receipt">
                                         <i class="fas fa-receipt"></i>
+                                    </button>
+                                </a>
+                                 <!--Print invoice-->
+                                 <a href="{% url 'sales:sales_invoice_pdf' s.id %}" class="text-decoration-none">
+                                    <button type="button" class="btn btn-dark btn-sm" data-bs-toggle="tooltip" title="View Invoice">
+                                        <i class="fas fa-file-invoice"></i>
                                     </button>
                                 </a>
                             </td>
